# Napari-measure-length

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari_measure_length/: napari.yaml
src/napari_measure_length/_tests/: test_reader.py  test_widget.py
